# Penguin-Studio

./: .gitignore  .gitmodules  LICENSE  README.md  architecture.md  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  conftest.py  pyproject.toml  run.py
backend/app/: config.py  main.py  setup_model.py  test_prompt.py  test_sam3.py  verify_endpoints.py
backend/app/agentic/: analyzer.py  orchestrator.py  tool_registry.py
backend/app/api/: __init__.py  dependencies.py
backend/app/detection/: __init__.py  backend.py  desc_deduper.py  field_spec_builder.py  prompt_builder.py  sam3_detector.py  semantic_parser.py  semantic_refiner.py  (+1 more)
backend/docs/: scene_parsing_api.md
backend/examples/: 01.json  02.json  03.json
backend/scripts/: generate_prompts.py  run_sam3_examples.py  verify_endpoints.py
backend/tests/: README.md  conftest.py  manual_test_prompt.py  manual_test_sam3.py  manual_verify_endpoints.py  test_agent_memory_service.py  test_agentic_flow.py  test_analyzer_postprocess.py  test_bria_service_edit_helpers.py  test_cors_security.py  test_desc_deduper.py  test_edit_workflow.py  test_endpoints.py  test_examples_endpoint.py  test_file_service.py  test_filesystem_security.py  test_filesystem_utils.py  test_generation_security.py  test_library_endpoint.py  test_prompt_builder.py  test_sam3_model.py  test_scene_parsing_routes.py  test_scene_parsing_service.py  test_schemas.py  test_security_exploit.py  test_security_fixes.py  test_security_generation.py  test_security_upload_limit.py  test_segmentation_service.py  test_websocket_manager.py
(+389 files in other folders)
